# agentic-graphql

./: .env.sample  .gitignore  README.md  pyproject.toml
src/graphql_agent/: __init__.py  config.py  context.py  main.py  prompt_router.py  schema.py
src/graphql_agent/services/: __init__.py  ai_analyzer.py  base.py  mcp.py
src/graphql_agent/types/: mcp_2025_08_16.py
